# Particle-System-Editor

./: .gitignore  CMakeLists.txt  README.md
UnityPlugin/Assets/H4CameraOperate/Assets/Scripts/: CameraOperate.cs
UnityPlugin/Assets/Materials/: JointMaterial.mat  ParticleMaterial.mat  PlaneMaterial.mat  SkeletonMaterial.mat  UVMaterial.mat
UnityPlugin/Assets/Materials/Behavior/: FloorMaterial.mat  Leade Indicator Material.mat  Transparent Sphere Material.mat
UnityPlugin/Assets/Materials/Environment/: GroundMaterial 1.mat  GroundMaterial 2.mat  GroundMaterial 3.mat  GroundMaterial 4.mat  GroundMaterial 5.mat  GroundMaterial 6.mat  GroundMaterial.mat  Terrain.mat
UnityPlugin/Assets/Materials/FKIK/: Guide Target Material.mat  Joint Target Material.mat
UnityPlugin/Assets/Materials/Gizmo/: GizmoActive.mat  GizmoCenter.mat  GizmoCenterActive.mat  GizmoX.mat  GizmoY.mat  GizmoZ.mat  PaleRed.mat
UnityPlugin/Assets/Plugins/: BehaviorPlugin.exp  BehaviorPlugin.lib  CurvePlugin.exp  CurvePlugin.lib  FKIKPlugin.exp  FKIKPlugin.lib  ParticlePlugin.exp  ParticlePlugin.lib  __CurvePlugin.ilk  __FKIKPlugin.old  __ParticlePlugin.ilk
UnityPlugin/Assets/Prefabs/: terrain4.prefab
UnityPlugin/Assets/Prefabs/Behavior/: Behavior Controller.prefab  Obstacle.prefab
UnityPlugin/Assets/Prefabs/Curve/: Curve Plugin Manager.prefab  Ground.prefab
UnityPlugin/Assets/Prefabs/FKIK/: Joint.prefab  Skeleton Line.prefab  Target.prefab
UnityPlugin/Assets/Prefabs/Particle/: Dust Particle System.prefab  Particle.prefab
UnityPlugin/Assets/Scenes/: AnimationToolkit_Behavior_Group.unity  AnimationToolkit_Behavior_Single.unity  AnimationToolkit_TargetControl.unity  BVH.unity  FKIK.unity  Particle.unity
UnityPlugin/Assets/Scripts/: TerrainOBJ.cs
UnityPlugin/Assets/Scripts/Behavior/: BehaviorPlugin.cs  BehaviorPluginManager.cs  BehaviorUIController.cs  FKIKSpeedScaleController.cs
UnityPlugin/Assets/Scripts/FKIK/: BVHFileBrowserController.cs  FKIKCharacterController.cs  FKIKPluginManager.cs  FKIKUIController.cs  JointPainter.cs  TargetController.cs  TargetCurveController.cs  VirtualJointController.cs  VirtualJointGizmoController.cs
UnityPlugin/Assets/Scripts/Particle/: AParticleSystem.cs  DustGenerator.cs  ParticlePluginManager.cs
UnityPlugin/Assets/Scripts/UI/: PlayButtonController.cs
UnityPlugin/Assets/SimpleSky/_Materials/: SimpleSky.mat
src/animation/: aBehaviorController.cpp  aBehaviorController.h  aFireworks.cpp  aIKController.cpp  aIKController.h  aParticle.cpp  aSpark.cpp
